# NanoBee

./: .dockerignore  .env.example  .gitignore  Dockerfile.aio  Dockerfile.backend  Dockerfile.frontend  ENV_VARIABLES.md  PRD.md  PROJECT_BRIEF.md  README.md  TECH_PLAN_OVERVIEW.md  docker-compose.yml  docker-start-aio.sh  docker-start.sh  docker-stop.sh  nginx.conf  supervisord.conf
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  config.py  deps.py  image_client.py  main.py  skills.py
backend/app/api/: logs.py  ppt.py  tasks.py  workspaces.py
backend/app/db/: models.py  session.py
backend/app/harness/: __init__.py  coder.py  evaluation.py  feature_list.py  git_tools.py  initializer.py  memory.py  models.py  progress_log.py  prompts.py  runner.py  shell_tools.py  workspace.py
backend/app/llm/: __init__.py  base.py  dummy.py  openai_client.py
backend/app/ppt/: prompts.py  providers.py  schemas.py  service.py
backend/app/ppt/prompts/: outline.md  search_references.md  slide_content.md
backend/app/proxy/: __init__.py  api.py  client.py  config.py  constants.py  model_manager.py
backend/app/proxy/conversion/: __init__.py  request_converter.py  response_converter.py
backend/app/proxy/models/: claude.py
backend/app/utils/: logging.py
backend/tests/: test_app.py  test_full_flow.py  test_ppt_api.py  test_ppt_service.py  test_run_fullstack_script.py
frontend/: .env.example  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/src/: index.css  (+2 more)
scripts/: run_fullstack.sh  start_app.sh
(+40 files in other folders)
