[project]
name = "nanobee-backend"
version = "0.1.0"
description = "Long-running agent harness backend"
requires-python = ">=3.11"
authors = [{name = "Auto Agent", email = "agent@example.com"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
