[project]
name = "nanobee-backend"
version = "0.3.0"
description = "PPT workflow backend"
requires-python = ">=3.11"
authors = [{name = "Auto Agent", email = "agent@example.com"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.26",
  "ddgs>=9.9.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
