[project]
name = "nanobee-backend"
version = "1.0.0"
description = "Claude agent backend rebuilt with claude-agent-sdk"
requires-python = ">=3.11"
authors = [{name = "Auto Agent", email = "agent@example.com"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.26",
  "openai>=1.54",
  "claude-agent-sdk>=0.1.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
